--- a/2-sol/2-sol.tex
+++ b/2-sol/2-sol.tex
@@ -1,3 +1,5 @@
+% Preambulo donde están los paquetes que tienen
+% los comandos que se usan en el código.
 \input{../macros/preamble-general.tex}
 
 % Algunos paquetes quizás exclusivos de este archivo que no
@@ -21,160 +23,11 @@
 
 % Info para armar título.
 \title{Práctica 2 de álgebra 1} % título
-\author{Nad Garraz} % autor
+\author{Comunidad algebraica} % autor
 \date{\today} % Cambiar de ser necesario
 % \maketitle  % Para que aprezca el título en el documento
 
-\section*{Inducción, números naturales}
-
-\begin{enumerate}
-	\item $\paratodo n \en \naturales: \sumatoria{i = 1}{n} i =  1 + 2 + \cdots + (n-1) + n = \frac{n(n+1)}{2}$
-
-	\item $\paratodo n \en \naturales: \sumatoria{i = 0}{n} q^i =
-		      1 + q + q^2 + \cdots  + q^{n-1} + q^n =
-		      \llave{lll}{
-			      n+1 & \text{si} & q = 1\\
-			      \frac{q^{n+1}-1}{q-1} & \text{si} & q \distinto 1\\
-		      }$
-
-	\item Inducción: Sea $H \subseteq \reales$ un conjunto. Se dice que $H$ es un conjunto \textit{inductivo} si se cumplen las dos condiciones siguiente:
-	      \begin{itemize}
-		      \item $1 \in H$
-		      \item $\paratodo x , x \in H \entonces x+1 \en H$
-	      \end{itemize}
-
-	\item Principio de inducción: Sea $p(n), n \in \naturales$ , una afirmación sobre los números naturales.
-	      Si $p$ satisface
-	      \begin{itemize}
-		      \item (Caso Base) $p(1)$ es Verdadera.
-		      \item (Paso inductivo) $\paratodo h \en \naturales,\, p(h)$ \textit{Verdadera}
-		            $\entonces p(h+1)$ \textit{Verdadera, entonces $p(n)$ es Verdadera} $\paratodo n \en \naturales$.
-	      \end{itemize}
-
-	\item Principio de inducción \textit{corrido}: Sea $n_0 \en \enteros$ y sea $p(n),\, n\geq n_0,\,$ una afirmación sobre $\enteros_{\geq n_0}$. Si $p$
-	      satisface:
-	      \begin{itemize}
-		      \item (Caso Base) $p(n_0)$ es Verdadera.
-		      \item (Paso inductivo) $\paratodo h \geq n_0,\, p(h)$ \textit{Verdadera}
-		            $\entonces p(h+1)$ \textit{Verdadera, entonces $p(n)$ es Verdadera} $\paratodo n \en \naturales$.
-	      \end{itemize}
-\end{enumerate}
-
-\begin{enumerate}
-	\item explicación de las torres de Hanoi.
-	      \begin{enumerate}[label=\arabic*)]
-		      \item $a_1 = 1$
-		      \item $a_3 = 7$
-		      \item $a_4 = 15$
-		      \item $a_9 = a_9 +1+a_9 = 2 a_9 +1$
-	      \end{enumerate}
-	      $\to$ \boxed{a{_n+1} = 2a_n + 1}
-
-	\item Una sucesión $(a_n)_{n \en \naturales}$ como las torres de Hanoi $a_1 = 1 \y a_{n+1}= 2a_n + 1, \paratodo n \en \naturales$, es una
-	      sucesión definida por recurrencia.\\
-
-	\item El patrón de las torres de Hanoi parece ser $\underbrace{a_n = 2^n -1 }_{\text{término general}} \paratodo n \en \naturales$.
-	      Esto puedo probarse por inducción.
-	      $ \llave{l}{
-			      \text{Proposición:} p(n): a_n = 2^n -1\\
-			      \text{Caso Base: } p(1) \text{ es verdadero?} a_1 = 2^1 -1 =1 \Tilde\\
-			      \text{Paso inductivo: } p(h) \text{ es verdadero}  \entonces p(h+1) V?\\
-
-			      \llave{l}{
-				      \text{HI}:  a_h = 2^h -1\\
-				      \text{QPQ}: a_{h+1} = 2^{h+1}
-			      } \to \text{cuentas y queda que }  \boxed{ p(n)\ es\ V, \paratodo n \en \naturales}
-		      } $
-
-	\item $\sum$ es una def por recurrencia $\to \sumatoria{k=1}{1} a_k = a_1 \y \sumatoria{k=1}{n+1} a_k =... facil $
-
-\end{enumerate}
-
-
-\textit{Principio de inducción III: } Sea $p(n)$ una proposición sobre $\naturales$. Si se cumple:
-\begin{enumerate}
-	\item  $p(1) \y p(2) \ V$
-	\item $\paratodo h \en \naturales,\, p(h) \y p(h+1),\, V \entonces p(h+2)\ V\ (\text{paso inductivo})$,
-	      entonces $p(n)$ es verdadera.
-\end{enumerate}
-
-$p(n): a_n = 3^n$\\
-
-$\llave{l}{
-		\text{caso base: } a_1 = 3, a_2 =9 \Tilde\\
-		\text{Paso inductivo: } \paratodo h \en \naturales, p(h) \y p(h+1) \ V \entonces p(h+2)\ V\\
-
-		\llave{l}{
-			\text{HI: }  a_h = 3^h \y a_{h+1} = 3^{h+1}\\
-			\text{Quiero probar que: } a_{h+2}= 3^{h+2}\\
-			\text{Usando la fórmula de recurrencia sale enseguida}
-		}
-	}
-$
-
-\textit{Principio de inducción IV } Sea $p(n)$ una proposición sobre $\enteros_{\geq n_0}$. Si se cumple:
-\begin{enumerate}
-	\item  $p(n_0) \y p(n_0 + 1) \ V$
-	\item $\paratodo h \en \enteros_{\geq n_0},\, p(h+1) \y p(h+2)\, V \entonces p(h+2)\ V\ (\text{paso inductivo})$,
-	      entonces $p(n)$ es verdadera. $\paratodo n \geq n_0$\\
-\end{enumerate}
-
-
-\textit{Sucesión de Fibonacci}: $F_0 = 0, F_1 = 1, F_{n+2} = F_{n+1} + F_n, \paratodo n \geq 0$\\
-Truco para sacar fórmulas a partir de Fibo.\\
-$F_{n+2} - F_{n+1} - F_n = 0 \to x^2 - x -1 = 0 =
-	\llaves{ l }{
-		\Phi = \frac{1+\sqrt{5}}{2}\\
-		\tilde\Phi = \frac{1-\sqrt{5}}{2}\\
-	} \to \Phi^2 = \Phi + 1 \y \tilde\Phi^2  =\tilde\Phi + 1 $
-\begin{itemize}
-	\item  defino sucesiones $\Phi^n$ que satisfacen la recurrencia de la sucesión de Fibonacci pero no sus condiciones iniciales.
-	\item puedo formar una combineta lineal talque: $(c_n)_{n\en \naturales_0} = (a\Phi^n + b\tilde\Phi^n)$ es la sucesión que satisface:
-	      $\llave{ l }{
-			      c_o = a+b\\
-			      c_1 = a\Phi + b\tilde\Phi
-		      }$ y la recurrencia de Fibonacci.\\
-	      Resuelvo todo y llego a $\boxed{}$
-\end{itemize}
-
-\textit{Sucesione de Lucas}: Generalizaciones de Fibonacci.$(a_n)_{n\in\naturales_0}$\\
-
-$a_0 = \alpha, a_1 = \beta \y a_{n+2} = \gamma a_{n+1} +\delta a_n,\, \paratodo n \geq 0,\, con \alpha, \beta, \gamma, \delta $ dados.\\
-Esto lo meto en la ecuación característica: $x^2 - \gamma x -\delta = 0$, necesito raíces distintas.
-Notar que $r^2 = \gamma r^1 + \delta$, y lo mismo es para $\tilde r$. Las sucesiones ($r^n$) y ($\tilde r^n$) satisfacen la recurrencia de Lucas,
-pero no las condiciones iniciales $\alpha$ y $\beta$.
-$c_n = (a r^n + b \tilde r^n)$, satisface Lucas, pero las condiciones iniciales son $c_0$ y $c_1$ o
-$
-	\llave{l}{
-		a + b = \alpha\\
-		r a +\tilde b = \beta\\
-	}\to
-	\llave{l}{
-		ra +rb = r\alpha\\
-		ra + \tilde r b = \beta\\
-	}
-$ luego hago lo mismo con $\tilde r$
-Como resultado: $a = \frac{\beta - \tilde r \alpha}{r - \tilde r}$
-
-\section*{Ejercicio fuera de la guía}
-Se cumple que: $\frac{(2n)!}{n!^2} \leq (n+1)!, \, \paratodo n \en \naturales$?
-\begin{enumerate}
-	\item La proposición: $p(n): \frac{(2n)!}{n!^2} \leq (n+1)! $
-
-	\item Caso base: $p(n = 1)$ es Verdadera? $\flecha{evalúo}[$n = 1$] \frac{(2\cdot 1)!}{1!^2} = 2 \leq (1+1)! $\Tilde
-
-	\item Mi \textbf{HI} es \textit{que vale}  $ \frac{(2h)!}{h!^2} \leq (h+1)! $
-
-	\item Quiero probar que $\frac{(2(h+1))!}{(h+1)!^2} \leq ((h+1)+1)!
-		      \flecha{acomodo}
-		      \frac{(2h + 2)!}{(h + 1)!^2} \leq (h+2)!$
-
-	\item Hay que hacer cosas para poder meter la \textbf{HI} en las  cuentas del punto anterior.\\
-	      Noto que: $\frac{(2h + 2)!}{(h + 1)!^2} =
-		      \frac{(2h + 2) \cdot (2h + 1) \cdot \blue{(2h)!}}{(h + 1)^2 \cdot \blue{h!^2}} \stacktext{HI}\leq
-		      \frac{(2h + 2) \cdot (2h + 1)}{(h + 1)^2 } \blue{(h+1)!} \leq (h+2)!$\\
-	      Probando esa última desigualdad se prueba lo buscado.
-\end{enumerate}
+\input{./teoria-2/teoria-2.tex}
 
 \subsubsection*{Ejercicio de la clase del 12/4}
 Sea $(a_n)_{n \en \naturales_0}$ con
@@ -273,344 +126,13 @@ Interesante que acá la HI dependería de muchos términos. Así que ahora viene
 cambiada del principio de inducción.\\
 
 \section*{Ejercicios de la guía}
-%1
-\ejercicio
-\hacer
+\setcounter{ejercicio}{0}
 
+% Para hacer un input de todos los archivos en la
+% carpeta de "ejercicio-1"
+\foreach \ej in {1,..,17}
+\foreach \x in {1,2,3,...,17} {
+    \input{./ejercicios-2/ej-\x-2}
+  }
 
-%2
-\ejercicio
-
-\hacer
-
-
-%3
-\ejercicio
-Calcular
-\begin{multicols}{2}
-	\begin{enumerate}[label=\roman*)]
-		\item $ \sumatoria{i=1}{n} (4i + 1) $
-		      \hacer
-
-
-		\item $\sumatoria{i=6}{n} 2(i-5)$
-		      \hacer
-
-	\end{enumerate}
-\end{multicols}
-
-%4
-\ejercicio Calcular \begin{enumerate}[label=\roman*)] \item $\sumatoria{i=0}{n}2^i$\\
-	      $ \sumatoria{i=0}{n}2^i \stackrel{q\neq1} = \frac{\red{2}^{n+1} - 1}{\red{2} - 1} = 2^{n+1} - 1 $
-
-	\item $\sumatoria{i=1}{n} q^i$\\
-	      $\sumatoria{i=1}{n} q^i = \red{-1 + 1} + \sumatoria{i=1}{n} q^i = \red{-1} + \sumatoria{i = \red{0}}{n} q^i =
-		      \llave{lll}{
-			      n + 1 \red{-1} = n & \text{si} & q = 1\\
-			      \frac{q^{n+1}-1}{q-1} \red{-1} = \frac{q^{n+1} - q}{q-1} & \text{si} & q \distinto 1\\
-		      }$
-
-	\item \hacer
-	\item \hacer
-\end{enumerate}
-
-%5
-\ejercicio
-\begin{enumerate}[label=\roman*)]
-	\item
-	      \hacer
-
-	\item $\underbrace{S = \frac{N(N+1)}{2} = \sumatoria{1}{N} i }_{Gauss} \to \sumatoria{1}{n} 2i -1 = 2 \sumatoria{1}{n}i - \sumatoria{1}{n} 1 = 2 \frac{n (n+1)}{2} - n = n^2 + n -n = n^2 \Tilde $
-
-	\item $
-		      \llaves{ l }{
-			      \text{Primer caso } n = 1 \to \sumatoria{1}{1} 2i -1 = 1 = 1^2 \Tilde\\
-			      \text{Paso inductivo } n = h \to \sumatoria{1}{k} 2i -1 = k^2 \Tilde \entonces \sumatoria{1}{k+1} 2i -1 \stackrel{\green{?}}= (k+1)^2\\
-			      \sumatoria{1}{k+1} 2i -1 =
-			      \HI{
-				      \sumatoria{1}{k} 2i -1
-			      } + \kmasuno{
-				      2(k+1) -1
-			      } = k^2 + 2k + 1 = (k+1)^2 \green{\Tilde}
-		      } \to \boxed{\sumatoria{i = 1}{n} (2i - 1) = n^2}$
-\end{enumerate}
-
-%6
-\ejercicio
-\hacer
-
-%7
-\ejercicio
-\begin{enumerate}[label=\roman*)]
-	\item $\llave{ l }{
-			      \text{Primer caso } n = 1 \to \sumatoria{1}{1} (-1)^{i+1} i^2 = (-1)^2 \cdot 1 = 1 \Tilde\\
-			      \text{Paso inductivo }
-			      \llave{ l }{
-				      n = k \to \sumatoria{1}{k} (-1)^{i+1} i^2 = (-1)^{k+1} \frac{k(k+1)}{2} \\
-				      \entonces\\
-				      n = k+1 \to \sumatoria{1}{k+1}  (-1)^{i+1} i^2 \eq?= (-1)^{(k+1)+1} \frac{(k+1)(k+2)}{2}\\
-				      \to \sumatoria{1}{k+1}  (-1)^{i+1} i^2 =
-				      \HI{
-					      \sumatoria{1}{k} (-1)^{i+1} i^2
-				      } +
-				      \kmasuno{
-					      (-1)^{k+2} (k+1)^2
-				      } =\\
-				      (-1)^{k+1} \frac{k(k+1)}{2} + (-1)^k (-1)^2 (k+1)^2 \flecha{acomodar}[fáctor cómun] (-1)^k (k+1)\left[ -\frac{k}{2} + (k+1) \right] =\\
-				      (-1)^k (k+1)\frac{(k+2)}{2} \Tilde
-			      }
-		      }\\ \to
-		      \boxed{\sumatoria{i=1}{n} (-1)^{i+1} i^2 = (-1)^{n+1} \frac{n(n+1)}{2}}
-	      $
-
-	\item
-	      \hacer
-
-	\item
-	      \hacer
-
-	\item
-	      $\productoria{i=1}{n} \parentesis{ 1 + a^{2^{i-1}} } = \frac{1-a^{2^n}}{1-a}$\\
-	      $\llave{l}{
-		      \text{Primer caso } n = 1 \to
-		      \productoria{i=1}{1} ( 1 + a^{2^{i-1}} ) =
-		      1 + a^{2^0} = \magenta{1 + a} =
-		      \frac{1-a^{2^1}}{1 - a} = \frac{(1-a)(1+a)}{1-a} =
-		      \magenta{1 + a} \Tilde \\
-		      \text{Paso inductivo } n = k \to
-		      \productoria{i=1}{k} ( 1 + a^{2^{i-1}} ) =
-		      \frac{1-a^{2^k}}{1-a} \entonces
-		      n = k+1 \to  \productoria{i=1}{k+1} ( 1 + a^{2^{i-1}} ) \eq?=
-		      \frac{1 - a^{2^{k+1}}}{1-a}\\
-		      \llave{l}{
-		      \productoria{i=1}{k+1} ( 1 + a^{2^{i-1}} ) =
-		      \HI{
-			      \productoria{i=1}{k} ( 1 + a^{2^k} )
-		      } \cdot
-		      \kmasuno{
-			      1 + a^{2^{i-1}}
-		      }  =
-		      \frac{1-a^{2^k}}{1-a} \cdot 1 + a^{2^k}
-		      \flecha{diferencia}[de cuadrados]
-		      \frac{1 - ( a^{2^k})^2}{1-a} =\\
-		      \frac{1 - a^{2 \cdot 2^k}}{1-a} = \frac{1 - a^{2^{k+1}}}{1-a}\Tilde
-		      }
-		      }
-	      $
-
-
-
-	\item
-	      $\productoria{i=1}{n} \frac{n+i}{2i-3} = 2^n (1 -2n)$\\
-	      En este ejercicio conviene abrir la productoria y acomodar los factores. Por inducción:\\
-	      $\llave{l}{
-			      p(n):\ \productoria{i=1}{n} \frac{n+i}{2i-3} = 2^n (1 -2n)  \\
-			      \textit{Caso Base: } p(1) \text{ V?} \to \productoria{i=1}{1} \frac{1+i}{2i-3} = \frac{1+1}{2 \cdot 1 - 3} = 2^1 (1 - 2\cdot 1) = -2\\
-			      \textit{Paso inductivo: Supongo } p(k) \text{ Verdadero } \flecha{quiero ver}[que] p(k+1) \text{ Verdadero para algún } k \en \naturales.\\
-			      \textit{Hipótesis inductiva: Supongo } \productoria{i=1}{k} \frac{k+i}{2i-3} = 2^k (1 -2k), \qvq   \productoria{i=1}{k+1} \frac{k+1+i}{2i-3} = 2^{k+1} (1 -2(k+1))\\
-
-			      \llave{l}{
-				      \productoria{i=1}{k} \frac{k+i}{2i-3} = \frac{k+1}{2 \cdot 1 - 3} \cdot \frac{k+2}{2 \cdot 2 - 3} \cdot \frac{k+3}{2 \cdot 3 - 3} \cdots \frac{2k}{2 \cdot k - 3} = 2^k(1 - 2k)\\
-				      \productoria{i=1}{k+1} \frac{k+1+i}{2i-3} = \frac{k+2}{2 \cdot 1 - 3} \cdot \frac{k+3}{2 \cdot 2 - 3} \cdots \frac{k+1 + (k-1)}{2(k-1) - 3} \cdot \frac{k+1 + k}{2k - 3}\cdot \frac{k+1 + (k+1)}{2(k + 1) - 3} \\
-				      \flecha{Masajear: multiplico por $1 = \frac{\cyan{k+1}}{\cyan{k+1}}$}[corro los denominadores una fracción hacia $\leftarrow$]
-				      \frac{\cyan{k+1}}{\cyan{k+1}} \cdot \frac{1}{2 \cdot 1 - 3} \cdot \frac{k+2}{2 \cdot 2 - 3} \cdot \frac{k + 3}{2 \cdot 3 - 3} \cdots \frac{2 k}{2k - 3} \cdot \frac{2k + 1}{2(k+1) - 3}  \cdot \frac{2k+2}{1} = \\
-				      \flecha{acomodo para que}[aparezca la HI]
-				      \HI{
-					      \textstyle \frac{\cyan{k+1}}{2 \cdot 1 - 3} \cdot \frac{k+2}{2 \cdot 2 - 3} \cdot \frac{k + 3}{2 \cdot 3 - 3} \cdots \frac{2 k}{2k - 3} \cdot \frac{2k + 1}{2(k+1) - 3}
-				      }  \cdot \frac{2k+2}{\cyan{k+1}} =\\
-				      = 2^k (1 -2k) \cdot \frac{2k + 1}{2(k+1) - 3}  \cdot \frac{2k+2}{\cyan{k+1}} = 2^k \cancel{(1 - 2k)} \cdot \frac{2k + 1}{(-1)\cancel{(1 - 2k)}}  \cdot \frac{2\cancel{(k + 1)}}{\cancel{\cyan{k + 1}}} = 2^{k+1}(-1)(2k + 1)=\\
-				      = 2^{k+1} \parentesis{1 - 2(k+1)} \Tilde
-
-			      }
-		      }$
-	      Como $p(1)$ es verdadero y $p(k)$ es verdadero y $p(k+1)$ también lo es, por el principio de inducción $p(n)$ es verdadera $\paratodo n\en \naturales $
-\end{enumerate}
-
-%8
-\ejercicio
-Sea $a,\, b \en \reales$. Probar que para todo $n \en \naturales,\, a^n - b^n = (a-b) \sumatoria{i = 1}{n}a^{i-1}b^{n-i}$. Deducir la fórmula de la serie
-geométrica: para todo $a \neq 1,\, \sumatoria{i = 0}{n}a^i = \frac{a^{n+1} - 1}{a-1}$.\\
-$\llave{ l }{
-		\text{Primer paso: } n = 1 (a-b) \sumatoria{1}{1} a^{i-1} \cdot b^{1-1} = a - b = a^1 - b^1 \Tilde\\
-		\text{Paso inductivo: } n = k  a^k - b^k = (a-b) \sumatoria{i = 1}{k} a^{i-1} \cdot b^{k-i} \entonces
-		a^{k+1} - b^{k+1} \eq?= (a-b) \sumatoria{i = 1}{k+1} a^{i-1} \cdot b^{k+1-i}\\
-		\llave{l}{
-			(a-b) \sumatoria{i = 1}{k+1} a^{i-1} \cdot b^{k+1-i} =
-			(a-b) \sumatoria{i = 1}{k} a^{i-1} \cdot \underbrace{b^{k+1-i}}_{b\cdot b^{k-i}} +
-			\kmasuno{
-				(a - b) a^k \cdot b^{k+1-(k+1)}
-			} = \\
-			b \cdot
-			\HI{
-				(a-b) \sumatoria{i = 1}{k} a^{i-1} \cdot b^{k-i}
-			} + (a - b) a^k \eqHI= b \cdot a^k - b^k + (a - b) a^k = a^{k+1} - b^{k+1}\Tilde
-		}\\
-	}$\\
-Para deducir la fórmula de la serie geométrica $b = 1 \to (a-1) \sumatoria{i=1}{n} a^{i-1} = a^n - 1 \to\\
-	\llave{ l }{
-		(a-1) \sumatoria{1}{n} a^{i-1} = 
-        (a-1) \cdot (1 + a + a^2 + \cdots + a^{n-1})  = a^n - 1
-        \flecha{multiplico por $a$ y}[divido por $(a - 1)$ M.A.M.]\\
-		\sumatoria{1}{n} a^i = a + a^2 + \cdots + a^n  = \frac{a^{n+1} - a}{a-1}
-        \flecha{sumo un $1$}[M.A.M.]
-		\sumatoria{\magenta{i = 0}}{n} a^i = 1 + a + a^2 + \cdots + a^n   = \frac{a^n - a}{a-1} + 1 \to\\
-		\boxed{ \frac{a^n + 1}{a-1} =  \sumatoria{i = 0}{n} a^i  }
-	}$
-
-%9
-\ejercicio
-
-%10
-\ejercicio
-
-%11
-\ejercicio
-
-%12
-\ejercicio
-
-%13
-\ejercicio
-
-%14
-\ejercicio
-Probar que para todo $n \geq 3$ vale que:
-\begin{enumerate}[label=\roman*)]
-	\item La cantidad de diagonales de un polígono de $n$ lados es $\frac{n(n-3)}{2}$.\\
-	      Ejercicio donde hay que encontrar una fórmula a partir de algún método \textit{creativo} para luego probar por inducción.\\
-	      \begin{tikzpicture}[scale=0.9]
-		      \coordinate (n) at (0,0);
-		      \coordinate (1) at (2,0);
-		      \coordinate (2) at (3,1.5);
-		      \coordinate (3) at (3.5,2.5);
-		      \coordinate (k) at (2.5,3.8);
-		      \coordinate (n-3) at (0.5,4);
-		      \coordinate (n-2) at (-1,3.2);
-		      \coordinate (n-1) at (-2,2);
-
-		      \foreach \point/\position in {n/below left, 1/below, 2/right, 3/right, k/above right, n-3/above, n-2/above left, n-1/left}
-			      {
-				      \fill[OliveGreen] (\point) circle (3pt) node [\position] {$\point$};
-				      \draw[dashed, magenta] (n) -- (\point);
-			      }
-		      \draw[dashed, green] (n-1) -- (1);
-		      \draw[ultra thick, cyan] (n) -- (1) -- (2) -- (3) -- (k) -- (n-3) -- (n-2) -- (n-1) -- cycle;
-
-		      \begin{scope}[xshift=8cm]
-			      \coordinate (n) at (0,0);
-			      \coordinate (1) at (2,0);
-			      \coordinate (2) at (3,1.5);
-			      \coordinate (3) at (3.5,2.5);
-			      \coordinate (k) at (2.5,3.8);
-			      \coordinate (n-3) at (0.5,4);
-			      \coordinate (n-2) at (-1,3.2);
-			      \coordinate (n-1) at (-2,2);
-			      \foreach \point/\position in {n/below left, 1/below, 2/right, 3/right, k/above right, n-3/above, n-2/above left, n-1/left}
-				      {
-					      \fill[OliveGreen] (\point) circle (3pt) node [\position] {$\point$};
-				      }
-		      \end{scope}
-
-		      \draw[ultra thick, red] (n-1) -- (1) -- (2) -- (3) -- (k) -- (n-3) -- (n-2) -- (n-1) -- cycle;
-
-	      \end{tikzpicture}\\
-	      Se desprende del gráfico el siguiente razonamiento: En el polígono \cyan{cyan} de $n$ lados voy a tener una cantidad de
-	      diagonales dada por la sucesión $d_n$. El polígono \red{rojo} me genera polígono que tiene un lado menos y
-	      un lado menos, cantidad que viene determinada por $d_{n-1}$. Las líneas punteadas son las diagonales de $d_n$ que no estarán en
-	      $d_{n-1}$. Ahora voy a encontrar una relación entre ambas sucesiones. Al sacan un lado pierdo las \magenta{diagonales} desde $2$ hasta $n-2$ que
-	      serían $n - 3$ en total y además pierdo la {\color{green}diagonal} que conectan el vértice $1$ con el $n-1$:
-	      $\cyan{d_n} = \red{d_{n-1}} + \green{1} +\magenta{n-2} = d_{n-1} + n - 1$
-	      $\to {d_n = d_{n-1} + n - 1}$\\
-	      Ahora inducción:\\
-	      $p(n): d_n = \frac{n(n-3)}{2} \paratodo n \geq 3\\
-		      \llave{l}{
-		      \textit{Caso Base: } p(3) \V? \to \frac{3(3-3)}{2} = 0,\text{ lo cual es verdad para el triángulo.\Tilde}\\
-		      \textit{Paso inductivo: } p(k) \text{ es verdadero para algún } k \en \enteros_{\geq 3} \entonces p(k+1) \V?\\
-		      \textit{Hipótesis Inductiva: } d_k = \frac{k(k-3)}{2} \entonces d_{k+1} = \frac{(k+1)(k-2)}{ 2 } \\
-		      d={k+1} \eqDef = d_k + k-1 \eqHI = \frac{k(k-3)}{2} + k-1 = \frac{k^2 - k - 2}{2} = \frac{(k-2)(k+1)}{2} \Tilde\\
-		      }\\
-	      $
-	      Como $p(3) \y p(k) \y p(k+1)$ resultaron verdaderas, por el principio de inducción $p(n)$ es verdadera $\paratodo n \en \naturales_{\geq3}$
-
-	\item la suma de los ángulos interiores de un polígono de $n$ lados es $\pi(n-2)$.\\
-	      \begin{tikzpicture}[scale=0.9]
-		      \coordinate (n) at (0,0);
-		      \coordinate (1) at (2,0);
-		      \coordinate (2) at (3.2,1.5);
-		      \coordinate (3) at (3.7,2.8);
-		      \coordinate (k) at (2.5,3.8);
-		      \coordinate (n-3) at (0.5,4);
-		      \coordinate (n-2) at (-1,3.2);
-		      \coordinate (n-1) at (-2,2);
-
-		      \foreach \point/\position in {n/below left, 1/below, 2/right, 3/right, k/above right, n-3/above, n-2/above left, n-1/left}
-			      {
-				      \fill[OliveGreen] (\point) circle (3pt) node [\position] {$\point$};
-			      }
-		      \draw[dashed, green] (n-1) -- (1);
-		      \draw[ultra thick, cyan] (n) -- (1) -- (2) -- (3) -- (k) -- (n-3) -- (n-2) -- (n-1) -- cycle;
-
-
-		      \draw[dashed, green] (n-1) -- (1);
-		      \draw[ultra thick, cyan] (n) -- (1) -- (2) -- (3) -- (k) -- (n-3) -- (n-2) -- (n-1) -- cycle;
-
-		      \pic [draw, angle eccentricity=1.5] {angle = 1--n--n-1};
-		      \pic [draw, angle eccentricity=1.5] {angle = 2--1--n};
-		      \pic [draw, angle eccentricity=1.5] {angle = 3--2--1};
-		      \pic [draw, angle eccentricity=1.5] {angle = k--3--2};
-		      \pic [draw, angle eccentricity=1.5] {angle = n-3--k--3};
-		      \pic [draw, angle eccentricity=1.5] {angle = n-2--n-3--k};
-		      \pic [draw, angle eccentricity=1.5] {angle = n-1--n-2--n-3};
-		      \pic [draw, angle eccentricity=1.5] {angle = n--n-1--n-2};
-
-		      \pic [draw, red, angle eccentricity=1.5, angle radius=1cm] {angle = n-1--1--n};
-		      \pic [draw, red, angle eccentricity=1.5, angle radius=0.7cm] {angle = 1--n--n-1};
-		      \pic [draw, red, angle eccentricity=1.5, angle radius=1cm] {angle = n--n-1--1};
-	      \end{tikzpicture}\\
-	      En este caso estoy generando la suma de los ángulos internos de 2 polígonos, uno con $\alpha_n$ de $n$ lados y otro con $n-1, \alpha_{n-1}$
-	      Es más claro en este caso que al sacarle un lado, estoy robádo un triángulo que tiene como suma de sus ángulos internos $\pi$, entonces afirmo
-	      $\alpha_{n+1} = \alpha_n + \pi $. Ahora pruebo por inducción lo pedido.
-	      $p(n): \alpha_n = \pi(n-2) \paratodo n \geq 3$\\
-	      $ \llave{l}{
-			      \textit{Caso Base: } p(3) \V? \to \pi(3-2) = \pi, \text{ lo cual es verdad para el triángulo.\Tilde}\\
-			      \textit{Paso inductivo: } p(k) \text{ es verdadero para algún } k \en \enteros_{\geq 3} \entonces p(k+1) \V?\\
-			      \textit{Hipótesis Inductiva: } \alpha_k = \pi(k-2) \entonces \alpha_{k+1} = \pi(k-1) \\
-			      \llaves{l}{
-				      \alpha_k \eqDef = \alpha_{k+1} - \pi\\
-				      \alpha_k \eqHI= \pi(k-2)\\
-			      } \to \alpha_{k+1} = \pi(k-2) + \pi = \pi(k-1)\Tilde
-		      }$\\
-	      Como $p(3) \y p(k) \y p(k+1)$ resultaron verdaderas, por el principio de inducción $p(n)$ es verdadera $\paratodo n \en \naturales_{\geq3}$\\
-\end{enumerate}
-
-\separador
-
-\textit{Recurrencia}
-
-
-%15
-\ejercicio
-\begin{enumerate}[label=\roman*)]
-	\item
-	      Sea $(a_n)_{n\ en \naturales}$ la sucesión de números reales definida recursivamente por:\\
-	      $a_1 = 2$ y $a_{n+1} = 2 n a_n+ 2^{n+1}n!,\, \paratodo n \en \naturales$.\\
-	      Probar que $a_n = 2^n n!$.\\
-	      \magenta{Hecho en cuaderno, pasar}
-
-	\item
-	      Sea $(a_n)_{n\ en \naturales}$ la sucesión de números reales definida recursivamente por:\\
-	      $a_1 = 0$ y $a_{n+1} = a_n + n(3n + 1),\, \paratodo n \en \naturales$\\
-	      Probar que $a_n = n^2 (n-1)$.\\
-	      \magenta{Hecho en cuaderno, pasar}
-
-\end{enumerate}
-
-%16
-\ejercicio
-Hallar la fórmula para el término general de las sucesiones $(a_n)_{n \en \naturales}$
-
-%17
-\ejercicio
-
-\update
 \end{document}
