ejercicios a archivos en 7

--- a/2-sol/2-sol.tex
+++ b/2-sol/2-sol.tex
@@ -129,9 +129,9 @@ cambiada del principio de inducción.\\
 \setcounter{ejercicio}{0}
 
 % Para hacer un input de todos los archivos en la
-% carpeta de "ejercicio-1"
-\foreach \ej in {1,..,17}
-\foreach \x in {1,2,3,...,17} {
+% carpeta de "ejercicio-2"
+% ATENCION: Al agregar un ejercicio hay que modificar el loop de manera acorde
+\foreach \x in {1,...,17} {
     \input{./ejercicios-2/ej-\x-2}
   }
 
