--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -77,12 +77,7 @@
 \subsubsection*{Ejercicios de la guía:}
 \setcounter{ejercicio}{0} % Reset el counter de \ejercicio
 
-%1
-\input{ej-1-7.tex}
-
-\setcounter{ejercicio}{8}
-%9
-\input{ej-1-9.tex}
-%
-%
+\foreach \x in {1,9} {
+    \input{./ejercicios-7/ej-\x-7}
+}
 \end{document}
