--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -77,7 +77,7 @@
 \subsubsection*{Ejercicios de la guía:}
 \setcounter{ejercicio}{0} % Reset el counter de \ejercicio
 
-\foreach \x in {1,9} {
-    \input{./ejercicios-7/ej-\x-7}
+\foreach \x in {1,...,39} {
+    \input{./ejercicios-7/ej-\x-7.tex}
 }
 \end{document}
