--- a/6-sol/6-sol.tex
+++ b/6-sol/6-sol.tex
@@ -329,20 +329,10 @@ Si $w \en G_n \entonces
 			      \item \textit{Si} $w = \pm1$: \\
 			            $1 + w^2 + w^{-2} + w^4 + w^{-4} = 5$ \Tilde\\
 
-			      \item \textit{Si} $w \en G_5 \text{ y } w \distinto \pm1$: \\
-			            $1 + w^2 + w^{-2} + w^4 + w^{-4} = 1 + w^2 + w^3 + w^4 + w^1 = 0$\Tilde\\
-
-			      \item
-			            \textit{Si} $w \en G_2 \text{ es el caso } w = \pm 1$: \Tilde \\
-
-			      \item
-			            \textit{Si} $w\not\en G_2 \union G_5$: \\
-			            $1 + w^2 + w^{-2} + w^4 + w^{-4} = 1 + w^2 + w^8 + w^4 + w^6 = 0$ \Tilde\\
-                        Voy a rotar todo en $\frac{2\pi}{10}$ para así hacer que $"G_5" \to G_5.$\\
-                        $\ub{e^{- i \frac{2\pi}{10}}\cdot e^{i \frac{2\pi}{10}}}{1} (  1 + w^2 + w^8 + w^4 + w^6)=
-                        e^{- i \frac{2\pi}{10}} \ub{e^{i \frac{2\pi}{10}} (  1 + w^2 + w^8 + w^4 + w^6)}{=0} = 0 $\\
-			            \red{En el gráfico de $"G_5"$ puedo ver que la suma da 0, porque el pentágono de $G_5$ está
-                        rotado debería sumar 0 también. ¿Cómo justifico? } $\skull \skull \skull$
+                      \item \textit{Si} $w \en G_{10} \text{ y } w \distinto \pm 1$: \\
+			            $ 1 + w^2 + w^{-2} + w^4 + w^{-4} = 1 + w^2 + w^8 + w^4 + w^6 =\\
+                        = \sumatoria{k=0}{4} (w^2)^k = \frac{(w^2)^5 - 1}{w^2 - 1} = 
+                        \frac{w^{10} - 1}{w^2 - 1} = 0$
 		      \end{itemize}
 
 
