Pongo pdf's. Corrijo ej1-7

--- a/1-sol/1-sol.tex
+++ b/1-sol/1-sol.tex
@@ -22,6 +22,7 @@
 \date{last update: \today} % Cambiar de ser necesario
 % \maketitle  % Para que aprezca el título en el documento
 
+% Archivo con notas teóricas
 \input{./teoria-1/teoria-1.tex}
 
 \section*{Ejercicios sueltos que me parecen relevantes}
