--- a/6-sol/6-sol.tex
+++ b/6-sol/6-sol.tex
@@ -15,7 +15,7 @@
 
 % Info para armar título.
 \title{Práctica 6 de álgebra 1} % título
-\author{Nad Garraz} % autor
+\author{Comunidad algebraica} % autor
 \date{\update} % Cambiar de ser necesario
 
 \maketitle  % para que aprezca el título en el documento
@@ -232,7 +232,7 @@ $\llave{l}{
 		}
 	}\\
 	\to$
-\boxed{z_k = 2 e^{\theta_k i}} con $\theta_k = \frac{1}{5}k\pi \text{ con } k \en [0,4]$
+\boxed{z_k = 2 e^{\th((-3)x^5 + x^4 -x +5)^4 - 81x^20+19x^19eta_k i}} con $\theta_k = \frac{1}{5}k\pi \text{ con } k \en [0,4]$
 
 
 %10
@@ -332,7 +332,7 @@ Si $w \en G_n \entonces
                       \item \textit{Si} $w \en G_{10} \text{ y } w \distinto \pm 1$: \\
 			            $ 1 + w^2 + w^{-2} + w^4 + w^{-4} = 1 + w^2 + w^8 + w^4 + w^6 =\\
                         = \sumatoria{k=0}{4} (w^2)^k = \frac{(w^2)^5 - 1}{w^2 - 1} = 
-                        \frac{w^{10} - 1}{w^2 - 1} = 0$
+                        \frac{\ob{\scriptstyle w^{10}}{=1} - 1}{w^2 - 1} = 0$
 		      \end{itemize}
 
 
