Cada carpeta tiene el pdf correspondiente a la última actualización

--- a/3-sol/3-sol.tex
+++ b/3-sol/3-sol.tex
@@ -11,7 +11,7 @@
 
 % Info para armar título.
 \title{Práctica 3 de álgebra 1} % título
-\author{D. Garraz} % autor
+\author{Comunidad algebraica} % autor
 \date{last update: \today} % Cambiar de ser necesario
 % \maketitle  % Para que aprezca el título en el documento
 \section*{Ejercicios fuera de la guía}
