--- a/4-sol/4-sol.tex
+++ b/4-sol/4-sol.tex
@@ -15,7 +15,7 @@
 
 % Info para armar título.
 \title{Práctica 4 de álgebra 1} % título
-\author{Nad Garraz} % autor
+\author{Comunidad algebraica} % autor
 \date{last update: \today} % Cambiar de ser necesario
 
 \maketitle  % para que aprezca el título en el documento
