--- a/5-sol/5-sol.tex
+++ b/5-sol/5-sol.tex
@@ -10,7 +10,7 @@
 
 % Info para armar título.
 \title{Práctica 5 de álgebra 1} % título
-\author{D. Garraz} % autor
+\author{Comunidad Algebraica} % autor
 \date{last update: \today} % Cambiar de ser necesario
 
 \maketitle  % para que aprezca el título en el documento
