teoria a archivos y ejercicios a archivos en guia7

--- a/1-sol/1-sol.tex
+++ b/1-sol/1-sol.tex
@@ -1,13 +1,7 @@
-% Preambulo donde están los paquetes que tienen
-% los comandos que se usan en el código.
+% Preambulo donde están los paquetes que tienen los comandos que se usan en el código.
 \input{../macros/preamble-general.tex}
 
-% Definiciones y macros para que se me haga
-% más ameno el codeo.
-\input{../macros/definiciones.tex}
-
-% Voy a definir graficos fuera del documento para que
-% el código quede un poco más limpio
+% Gráficos fuera del documento para que el código quede un poco más limpio
 \include{graficos.tex} 
 
 \begin{document}
