--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -1,13 +1,7 @@
 \input{../macros/preamble-general.tex}
 
-% Algunos paquetes quizás exclusivos de este archivo que no
-% quiero poner en el preamble-general
-% el día de mañana podría integrarse
+% Algunos paquetes quizás exclusivos de esta guía
 \usepackage{polynom} % para división de polinomios
-
-% Definiciones y macros para que se me haga
-% más ameno el codeo.
-\input{../macros/definiciones.tex}
 
 \begin{document}
 
