--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -34,3 +34,7 @@
 \usetikzlibrary{external}
 
 \setlength{\parindent}{0pt} % Para que no haya indentación en las nuevas líneas.
+
+% Definiciones y macros para que se me haga
+% más ameno el codeo.
+\input{../macros/definiciones.tex}
