fix path from difiniciones.tex

--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -16,7 +16,7 @@
 
 \input{./teoria-7/teoria-7.tex}
 
-\subsubsection*{Ejercicios dados en clase:}
+\subsubsection*{Ejercicios de clase o parciales:}
 
 \newpage
 
