--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -77,6 +77,10 @@
 \def\re{\mathrm{Re}}
 \def\im{\mathrm{Im}}
 
+% Macros para polinomios
+\newcommand{\cp}[1]{\text{cp}(#1)}
+\newcommand{\gr}[1]{\text{gr}(#1)}
+
 
 % =====
 % Miscelanea
