--- a/7-guia/ejercicios-7/ej-10-7.tex
+++ b/7-guia/ejercicios-7/ej-10-7.tex
@@ -6,8 +6,8 @@ Sea $f \en \racionales[X]$ tal que $f(1) =  -2, f(2) = 1 \ytext f(-1) = 0.$ Hall
 \separadorCorto
 
 
-$f(x) = q(x)\cdot \ub{x^3 - 2x^2 -x + 2}{g(x)}  + r(x)$, con $g(x) = (x-2) \cdot (x-1)\cdot(x+1) \ytext
-	r(x) = a^2 + bx + c,$ ya que el $\gr{r} < \gr{g}$
+$f(X) = q(X)\cdot \ub{X^3 - 2X^2 -X + 2}{g(X)}  + r(X)$, con $g(X) = (X-2) \cdot (X-1)\cdot(X+1) \ytext
+	r(X) = a^2 + bX + c,$ ya que el $\gr{r} < \gr{g}$
 $\flecha{evaluar}
 	\llave{l}{
 		f(1) = -2 = q(1) \cdot \cancelto{0}{g(1)} + r(1) = -2\\
@@ -23,10 +23,10 @@ $\flecha{evaluar}
 		1 & 1 & 1 & -2 \\
 		4 & 2 & 1 & 1 \\
 		1 & -1 & 1 & 0 \\
-	}\to \\
+	}\to
 	\matriz{ccc|c}{
 		1 & 0 & 0 & \frac{4}{3} \\
 		0 & 1 & 0 & -1 \\
 		0 & 0 & 1 & -\frac{7}{3} \\
 	}
-	\to$ \boxed{r(x) = \frac{4}{3} x^2 - x - \frac{7}{3}}
+	\to$ \boxed{r(X) = \frac{4}{3} X^2 - X - \frac{7}{3}}
